--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,5 +8,17 @@ services:
     image: nginx:1.17
     ports:
       - 80:80
-    
-    
+    volumes:
+      - ./src:/var/www/php:ro
+      - ./.docker/nginx/conf.d:/etc/nginx/conf.d:ro
+    depends_on:
+      - php
+
+  # PHP Service
+  php:
+    image: php:7.4-fpm
+    working_dir: /var/www/php
+    volumes:
+      - ./src:/var/www/php
+
+      
